--- a/AwesomeReact/ClientApp/css/main.css
+++ b/AwesomeReact/ClientApp/css/main.css
@@ -19,6 +19,10 @@
     z-index: 1;
 }
 
+.displayNone {
+    display: none !important;
+}
+
 @media (max-width: 767px) {
     /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
     body {
@@ -71,3 +75,5 @@
             text-overflow: ellipsis;
         }
 }
+
+
